fix: remove deprecated URL constructor usage in JDK 20